<resources>
    <string name="app_name">Hide My File</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_login_title">Login</string>


    <string name="activity_main_warning_no_file">No encrypted files was found. Click button at right bottom corner to encrypt something!</string>


    <string name="login_hello">Please, enter password:</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_help">Need help?</string>
    <string name="login_button_more">Know more</string>
    <string name="login_hint">Login</string>
    <string name="login_error_bad_password">Bad password</string>

    <string name="login_dialog_error_title">Warning!</string>
    <string name="login_dialog_error_message">Bad password. Please, try again</string>

    <string name="login_error_message_too_short">Too short password</string>
    <string name="login_error_message_too_long">Too long password</string>
    <string name="login_error_message_empty">Type password</string>


    <string name="menu_main_settings_title">Settings</string>
    <string name="menu_main_exit_title">Exit</string>
    <string name="menu_login_more_title">More</string>


    <string name="settings_general_title">General</string>
    <string name="settings_security_title">Security</string>

    <string name="setting_general_show_hidden_title">Scan hidden directories</string>
    <string name="setting_general_show_hidden_subtitle">Enable or disable scanning of hidden directories</string>
    <string name="setting_general_hide_after_title">Hide file after encryption</string>
    <string name="setting_general_hide_after_subtitle">Enable if you want to hide file after encryption (i.e. add prefix before file name)</string>

    <string name="setting_security_password_change_title">Change password</string>
    <string name="setting_security_password_change_subtitle">Change 4-digit password</string>
    <string name="setting_security_read_more_title">Read more</string>
    <string name="setting_security_read_more_subtitle">Read more about basic security rules of application</string>


    <string name="dialog_file_properties_title">File properties</string>
    <string name="dialog_file_properties_positive">OK</string>


    <string name="dialog_file_delete_title">Are you sure?</string>
    <string name="dialog_file_delete_positive">Yes</string>
    <string name="dialog_file_delete_negative">No</string>
    <string name="dialog_file_delete_message">Do you want to delete this file?</string>
    <string name="dialog_file_delete_successful">File deleted</string>
    <string name="dialog_file_delete_unsuccessful">Error while deleting file</string>


    <string name="dialog_file_action_title">Choose action:</string>
    <string name="dialog_file_action_decrypt">Decrypt</string>
    <string name="dialog_file_action_properties">Properties</string>
    <string name="dialog_file_action_delete">Delete</string>
    <string name="dialog_file_action_hide">Hide</string>
    <string name="dialog_file_action_show">Show</string>


    <string name="dialog_password_change_hint_old">Old password</string>
    <string name="dialog_password_change_hint_new">New password</string>
    <string name="dialog_password_change_hint_repeat">Repeat new password</string>
    <string name="dialog_password_change_title">Password changing</string>
    <string name="dialog_password_change_positive">Change</string>
    <string name="dialog_password_change_negative">Cancel</string>
    <string name="dialog_password_change_error_empty">Type password</string>
    <string name="dialog_password_change_error_length_short">Too short password</string>
    <string name="dialog_password_change_error_bad_pwd">Bad password</string>
    <string name="dialog_password_change_error_length_long">Too long password</string>
    <string name="dialog_password_change_error_match">Passwords not match</string>
    <string name="dialog_password_change_success">Password successfully changed</string>


    <string name="dialog_encryption_hint">Password</string>
    <string name="dialog_encryption_title">Encryption warning!</string>
    <string name="dialog_encryption_positive">Encrypt</string>
    <string name="dialog_encryption_negative">Cancel</string>
    <string name="dialog_encryption_error_empty">Type password</string>
    <string name="dialog_encryption_error_short">Too short password</string>
    <string name="dialog_encryption_error_long">Too long password</string>


    <string name="dialog_decryption_hint">Password</string>
    <string name="dialog_decryption_title">Decryption warning!</string>
    <string name="dialog_decryption_positive">Decrypt</string>
    <string name="dialog_decryption_negative">Cancel</string>
    <string name="dialog_decryption_error_empty">Type password</string>
    <string name="dialog_decryption_error_short">Too short password</string>
    <string name="dialog_decryption_error_long">Too long password</string>


    <string name="dialog_loading_encryption">Encrypting in progress…</string>
    <string name="dialog_loading_decryption">Decrypting in progress…</string>
</resources>
