<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dialog_password_change_hint_old"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/password_4_length"
        app:counterOverflowTextAppearance="@style/AppTheme.TextInputLayout.CounterOverflowAppearance"
        app:counterTextAppearance="@style/AppTheme.TextInputLayout.CounterAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorAppearance"
        app:theme="@style/AppTheme.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textColor="@color/colorTextPrimary"
            android:textCursorDrawable="@drawable/cursor"
            app:theme="@style/AppTheme.TextInputLayout.EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/dialog_password_change_hint_new"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/password_4_length"
        app:counterOverflowTextAppearance="@style/AppTheme.TextInputLayout.CounterOverflowAppearance"
        app:counterTextAppearance="@style/AppTheme.TextInputLayout.CounterAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorAppearance"
        app:theme="@style/AppTheme.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textColor="@color/colorTextPrimary"
            android:textCursorDrawable="@drawable/cursor"
            app:theme="@style/AppTheme.TextInputLayout.EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/dialog_password_change_hint_repeat"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/password_4_length"
        app:counterOverflowTextAppearance="@style/AppTheme.TextInputLayout.CounterOverflowAppearance"
        app:counterTextAppearance="@style/AppTheme.TextInputLayout.CounterAppearance"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorAppearance"
        app:theme="@style/AppTheme.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textColor="@color/colorTextPrimary"
            android:textCursorDrawable="@drawable/cursor"
            app:theme="@style/AppTheme.TextInputLayout.EditText" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="right|end"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/action_negative"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/clickable_item_transparent"
            android:text="@string/dialog_password_change_negative"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/action_positive"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/clickable_item_transparent"
            android:text="@string/dialog_password_change_positive"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>