<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:paddingBottom="8dp"
    android:paddingTop="16dp"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/dialog_file_action_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/action_decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_lock_open_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/dialog_file_action_decrypt"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:id="@+id/action_properties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_info_outline_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/dialog_file_action_properties"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:id="@+id/action_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_delete_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/dialog_file_action_delete"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/action_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_remove_red_eye_primary_24dp" />

                <TextView
                    android:id="@+id/text_hide"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/dialog_file_action_hide"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:id="@+id/action_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_info_outline_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="Item_1"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:id="@+id/action_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_transparent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_delete_primary_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="Item_2"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>